src/sass/1j22f.scss
/* ... */
.projects{
  margin: 120px 0 140px 0;
  // background: #fff;
  height: 50px;
  width: 100%;
  overflow: visible;
  position: relative;
  display: flex;

  .project{
    height: 300px;
    width: 33%;
    background: rgba(#000, 0.6);
    transform: scale(0.85);
    margin: auto;
    display: inline-block;
    transition: transform 200ms;
    box-sizing: border-box;
    border-radius: 10px;
    position: relative;
    overflow: hidden;
    cursor: pointer;
    text-transform: uppercase;
    color: #fff;
    text-decoration: none;

    &.active{
      transform: scale(1);
    }

    &:hover{
      &:before{
        opacity: 0.4;
      }
    }


    &:before{
      position: absolute;
      height: 100%;
      width: 100%;
      content: '';
      opacity: 0.2;
      z-index: -1;
      transition: opacity 400ms;
    }
    &.pouk{
      &:before{
        background: #fff url(/img/UK-Mascot_Bulldog.png) 50% 50%;
        background-size: cover;
      }
    }
    &.pates-law{
      &:before{
        background: url(/img/vibrant-orlando.jpg) 50% 50%;
        background-size: cover;
      }
    }
    &.juiced{
      &:before{
        background: url(/img/juiced.jpg) 50% 50%;
        background-size: cover;

      }
    }


    .project_content{
      transition: transform 200ms;
      text-align: center;
      display: flex;
      height: 100%;
      align-items: center;
      text-align: center;
      width: 100%;
      .title{
        width: 100%;
        font-family: "Oswald", serif;
        font-weight: 400;
        text-transform: uppercase;
      }
    }

  }
}
.fixed-footer{
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 50px;
  z-index: 1000;
  // background: rgba(2,2,2,0.6);

  .achievement-box, .error-box{
    pointer-events: none;
    transform: translateY(100px);
    display: block;
    position: absolute;
    left: 0;
    height: 50px;
    max-width: 100%;
    width: 300px;
    padding-left: 120px;
    //
    padding-left: 60px;
    top:0;
    transition: transform 400ms;

    &.error-box{
      right: 10px;
      left: auto;
      text-align: right;
      width: 99%;
    }

    &.activate{
      transform: translateY(0);
      background: rgba(#0d0f0b,0.6);
    }

    .title{
      margin: 0;
      padding: 0;
      font-size: 18px;
      font-family: 'Avenir';
      font-weight: 100;
      color: #aaa;
      text-transform: uppercase;
      animation: andUp 1s 1;
      @keyframes andUp {
        0% {
          opacity: 0;
          transform: translateY(50px);
        }
        100% {
          opacity: 1;
          transform: translateY(0);
        }
      }
    }

    .achievement, .error{
      font-family: "Oswald", sans-serif;
      font-size: 12px;
      color: #eee;
      animation: fadeIn 3s 1;
      @keyframes fadeIn {
        0% {
          opacity: 0;
        }
        100% {
          opacity: 1;
        }
      }
      &.error .name{
        // color: #c92929;
        font-size: 13px;
        animation: flashTeal 4s 2s 2;

      }
      .name{
        color: #fff;
        animation: flashTeal 8s 400ms 1;
        @keyframes flashTeal {
          50% {
            color: #24E0E0;
          }
        }
      }

    }
  }

  .avatar-box{
    background: teal;
    height: 100px;
    width: 100px;
    border-radius: 100px;
    bottom: 20px;

    //
    height: 60px;
    width: 60px;
    bottom: auto;
     top: 10px;
    // background: #121;
    background: transparent;
    right: 5px;
    //
    position: relative;
    text-align: center;
    z-index: 1001;
    transition: background 300ms, transform 400ms, opacity 400ms;
    cursor: pointer;
    opacity: 0.9;

    &:hover{
      // background: darken(#35d6c9, 10%);
      // background: rgba(gold,0.06);
      color: lighten(teal,10%);
      opacity: 1;
    }

    .avatar{
      position: relative;
      top: 15px;

      //
      top : 0px;
      left: 5px;
      font-size: 1.2rem;
      transition: color 200ms;

      transform: scale(0) translateY(200px);
      opacity: 0;
      animation: popIn 1s 1 forwards;

      @keyframes popIn {

        100%{
          transform: scale(1) translateY(0);
          opacity: 1;
        }
      }

      img{
        max-width: 25px;
      }
    }
  }

}
.message-success{
  clear: both;
  text-align: right;
  margin-top: 60px;

  padding-top: 10px;
  position: relative;
  height: 400px;

}
#message-success{
  display: none;
  animation: fadeUp 1s 1 forwards;
  opacity: 0;
  transform: translateY(10px);
  @keyframes fadeUp {
    100% {
      transform: translateY(0);
      opacity: 1;
    }
  }
  &.show{
    display: block;
  }
}
/* ... */

